--- a/index.html
+++ b/index.html
@@ -9,28 +9,89 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="bg-header text-white">
+    <!-- header -->
+    <header class="bg-header text-white text-uppercase">
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-between pt-3 pb-3">
-                <div class="col-6 text-uppercase">
+                <div class="col-6 d-flex align-items-center">
                   Start bootstrap 
                 </div>
-                <div class="col-6 d-md-none d-flex justify-content-end">
-                  <i class="fas fa-bars d-flex align-items-center"></i>
-                </div>
-                <div class="col-2-md text-uppercase d-flex justify-content-end">
-                    <p>portfolio</p>
-                </div>
-                <div class="col-2-md text-uppercase d-flex justify-content-end">
-                    <p>about</p>
-                </div>
-                <div class="col-2-md text-uppercase d-flex justify-content-end">
-                    <p>contact</p>
+                <div class="col-6 d-flex justify-content-end ">
+                  <i class="fas fa-bars d-flex align-items-center d-md-none"></i>
+
+                    <div class="d-none d-flex d-md-block">
+                        <ul class="d-flex gap-3">
+                            <li> <a href="#">portfolio</a></li>
+                            <li> <a href="#">about</a></li>
+                            <li> <a href="#">contact</a></li>
+                        </ul>
+                    </div>
                 </div>
               </div>
             
         </div>
     </header>
+    <!-- fine header -->
+
+    <!-- main -->
+    <main>
+        <!-- start bootstrap -->
+        <div class="container-fluid bg-mint">
+            <div class="row text-white text-uppercase">
+                <div class="col-12 d-flex justify-content-center pt-4">
+                    <img src="./img/avatar.svg">
+                </div>
+                <div class="col-12 d-flex justify-content-center pt-2">
+                    <h1>start bootstrap</h1>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <p>graphic artist - web designer - illustrator</p>
+                </div>
+                
+            </div>
+        </div>
+        <!-- portfolio -->
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-12 text-uppercase text-center text-color-charcoal">
+                    <h2>portfolio</h2>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                    <img src="./img/cabin.png">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                    <img src="./img/cake.png">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                    <img src="./img/circus.png">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                    <img src="./img/game.png">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                    <img src="./img/safe.png">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                    <img src="./img/submarine.png">
+                </div>
+            </div>
+        </div>
+        <!-- about -->
+        <div class="container-fluid bg-mint mt-4 text-white">
+            <div class="row">
+                <div class="col-12">
+
+                    <h3 class="text-uppercase text-center pt-5">about</h3>
+                    <p class="text-center">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p class="text-center">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <button class="fas fa-download bg-mint">Download</button>
+                </div>
+
+            </div>
+        </div>
+
+    </main>
+    <!-- fine main -->
 </body>
 </html>
