--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap Freelancer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,7 +12,7 @@
     <!-- header -->
     <header class="bg-header text-white text-uppercase">
 
-        <div class="container-fluid">
+        <div class="container">
             <div class="row justify-content-between pt-3 pb-3">
                 <div class="col-6 d-flex align-items-center">
                   Start bootstrap 
@@ -79,19 +79,81 @@
         </div>
         <!-- about -->
         <div class="container-fluid bg-mint mt-4 text-white">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-12">
-
                     <h3 class="text-uppercase text-center pt-5">about</h3>
-                    <p class="text-center">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                    <p class="text-center">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                    <button class="fas fa-download bg-mint">Download</button>
+                </div>
+                <div class="col-8 col-md-6">
+                    <p class="text-start">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                </div>
+                <div class="col-8 col-md-6">
+                    <p class="text-start">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                </div>
+                <div class="col-8 text-center">
+                    <button class="fas fa-download bg-mint text-white border-0">Download</button>
                 </div>
 
             </div>
         </div>
+        <!-- contact me -->
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-10">
+                        <h3 class="text-uppercase text-center pt-5">contact me</h3>
+                    </div>
+                    <div class="col-10 pt-2">
+                        <p>Name</p>
+                    </div>
+                    <div class="col-10 pt-2 border-top">
+                        <p>Email Address</p>
+                    </div>
+                    <div class="col-10 pt-2 border-top">
+                        <p>Phone Number</p>
+                    </div>
+                    <div class="col-10 pt-2 border-top pb-5">
+                        <p>Message</p>
+                    </div>
+                    <div class="col-10 border-top pt-1 pb-5">
+                        <button class="p-2 bg-mint text-white border-0 border-radius">Send</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <!-- fine main -->
+
+    <!-- footer -->
+    <footer class="text-white">
+        <div class="container-fluid bg-yinmn-blue">
+            <div class="row text-center">
+                <div class="col-12 col-md-4">
+                    <h3 class="text-uppercase pt-5">location</h3>
+                    <p>2215 John Daniel Drive Clark, MO 54243</p>
+                </div>
+                <div class="col-12 col-md-4 text-center pt-5">
+                    <p class="text-uppercase">around the web</p>
+                    
+                    <div class="d-flex gap-3 justify-content-center">
+                        <i class="fab fa-facebook-f border p-2 border-radius-footer"></i>
+                        <i class="fab fa-google-plus border p-2 border-radius-footer"></i>
+                        <i class="fab fa-twitter border p-2 border-radius-footer"></i>
+                        <i class="fab fa-invision border p-2 border-radius-footer"></i>
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-4 pt-5">
+                    <p class="text-uppercase">about freelancer</p>
+                    <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-header">
+            <div class="col-12 pt-4 text-center pb-3">
+                <p>Copyright <i class="fas fa-copyright"></i> Your Website 2019</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
