add pb-5 in about

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="col-8 col-md-6">
                     <p class="text-start">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 </div>
-                <div class="col-8 text-center">
+                <div class="col-8 text-center pb-5">
                     <button class="fas fa-download bg-mint text-white border-0">Download</button>
                 </div>
 
