--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                   <i class="fas fa-bars d-flex align-items-center d-md-none"></i>
 
                     <div class="d-none d-flex d-md-block">
-                        <ul class="d-flex gap-3">
+                        <ul class="d-flex gap-3 my-0">
                             <li> <a href="#">portfolio</a></li>
                             <li> <a href="#">about</a></li>
                             <li> <a href="#">contact</a></li>
                         </ul>
                     </div>
                 </div>
-              </div>
+            </div>
             
         </div>
     </header>
@@ -45,6 +45,7 @@
                 <div class="col-12 d-flex justify-content-center pt-2">
                     <h1>start bootstrap</h1>
                 </div>
+                <i class="fas fa-star text-center"></i>
                 <div class="col-12 d-flex justify-content-center">
                     <p>graphic artist - web designer - illustrator</p>
                 </div>
@@ -60,19 +61,19 @@
                 <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
                     <img src="./img/cabin.png">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center ">
                     <img src="./img/cake.png">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center ">
                     <img src="./img/circus.png">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center ">
                     <img src="./img/game.png">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center ">
                     <img src="./img/safe.png">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 mt-3 d-flex justify-content-center ">
                     <img src="./img/submarine.png">
                 </div>
             </div>
